@@ -3,6 +3,9 @@ Released 2.0.0pre12 2003-05-xx
 
 Changes since 2.0.0pre11:
 
+ldap.ldapobject:
+* Trace log writes LDAP URI of connection instead of module name
+
 ldif:
 * Abandoned argument all_records of LDIFRecordList.__init__()
 
